距离2022.12已逾4个月，此项目为大三上JavaWeb大作业，最后整理上传，记录奋斗与回顾青涩的日子

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>WeMeet</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -147,6 +147,7 @@
 
 <!--        lombok便于编写entity-->
 <!--        -->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -189,7 +190,12 @@
 
 
     </dependencies>
+
+    <name>WeMeet</name>
+    <!-- 打包war包 -->
+    <packaging>war</packaging>
     <build>
+        <finalName>${artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
@@ -208,5 +214,7 @@
         </resources>
 
     </build>
+
+
 
 </project>
