--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,12 +1,12 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 #?????
-jdbc.url=jdbc:mysql://localhost:3307/webrtc?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+jdbc.url=jdbc:mysql://47.92.143.63:3306/webrtc?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #???
-jdbc.username=root
+jdbc.username=sth
 #??
-jdbc.password=1137506914
+jdbc.password=sth
 
-#?????
+
 c3p0.maxPoolSize=30
 #?????
 c3p0.minPoolSize=10
